--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <header class="font-poppins font-medium text-lg sticky top-0">
         <nav class="bg-primary shadow-lg flex justify-between items-center mx-auto px-8 md:px-14 py-6 lg:px-24 w-full">
-            <div class="text-3xl font-bold text-white">Jane Doe</div>
+            <div class="text-3xl font-bold text-white">Joshua Ezekiel</div>
                 <div class="hidden md:flex space-x-12 items-center text-white ">
                     <a href="#" class="text-selected-text">Home</a>
                     <a href="#about">About</a>       
@@ -56,7 +56,7 @@
 
         <!-- Left column -->
             <div class="w-full xl:w-2/5 p-12 overflow-hidden">
-                <img src="/layouts/assets/you.jpg" alt="your name" class="rounded-3xl mx-auto w-full md:w-4/5 "/>
+                <img src="/layouts/assets/thejosh1.png" alt="your name" class="rounded-3xl mx-auto w-full md:w-4/5 "/>
                 <div class="flex mt-16 mb-16 flex-row space-x-6 justify-center ">
                     <a href="#" class="">
                         <img width="46" height="45" src="/layouts/assets/linkedin-icon.svg" alt="Linkedin" class="text-white -mt-1 hover:bg-[#F62BA5] rounded-md"/>
@@ -75,7 +75,7 @@
             
         <!-- Right column -->
             <div class="flex flex-col w-full p-2 xl:w-3/5 justify-center lg:items-start overflow-y-hidden">
-                <h1 class="font-semibold font-poppins text-4xl text-white md:text-2xl lg:text-5xl text-center md:text-center">Hello!<br> I'm   <span class="main-font">Jane Doe</span>, a Frontend Developer based in Europe</h1>
+                <h1 class="font-semibold font-poppins text-4xl text-white md:text-2xl lg:text-5xl text-center md:text-center">Hello!<br> I'm Joshua Ezekiel A.K.A  <span class="main-font">TheJosh</span>, a developer with specialisation in full stack web applications</h1>
                     <p class="font-thin font-montserra text-white mt-20 text-2xl md:text-2xl lg:text-2xl text-center md:text-left">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, aliquid placeat? Beatae nam porro dolore. Deleniti magnam ad quae nesciunt.</p>
                     <p class="font-thin font-montserra text-white mt-16 text-2xl md:text-2xl lg:text-2xl text-center md:text-left">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, aliquid placeat? Beatae nam porro dolore. Deleniti magnam ad quae nesciunt.</p>
                 <div class="flex space-x-10 my-2 md:items-center justify-center mb-16">
@@ -196,25 +196,28 @@
                                     <img width="50" height="50" src="/layouts/assets/html.svg"/>
                                 </div>
                                 <div>
+                                    <img width="50" height="70" src="/layouts/assets/vue.svg"/>
+                                </div>
+                                <div>
+                                    <img width="50" height="70" src="/layouts/assets/python.svg"/>
+                                </div>
+                                <div>
                                     <img width="50" height="70" src="/layouts/assets/css.svg"/>
                                 </div>
                                 <div>
-                                    <img width="50" height="70" src="/layouts/assets/react.svg"/>
+                                    <img width="50" height="70" src="/layouts/assets/nuxt.svg"/>
+                                </div>
+                                <div>
+                                    <img width="50" height="70" src="/layouts/assets/postgresql.svg"/>
                                 </div>
                                 <div>
                                     <img width="50" height="70" src="/layouts/assets/js.svg"/>
                                 </div>
                                 <div>
-                                    <img width="50" height="70" src="/layouts/assets/react.svg"/>
+                                    <img width="50" height="70" src="/layouts/assets/tailwindcss.svg"/>
                                 </div>
                                 <div>
-                                    <img width="50" height="70" src="/layouts/assets/js.svg"/>
-                                </div>
-                                <div>
-                                    <img width="50" height="70" src="/layouts/assets/html.svg"/>
-                                </div>
-                                <div>
-                                    <img width="50" height="70" src="/layouts/assets/css.svg"/>
+                                    <img width="50" height="70" src="/layouts/assets/git.svg"/>
                                 </div>
                             
                             </div>
@@ -265,7 +268,7 @@
                 </form>
             </div>
             <div class="w-full xl:w-2/5 p-12 overflow-hidden">
-                <img src="/layouts/assets/you2.png" alt="Reporting" class="rounded-3xl mx-auto w-full md:w-2/5"/>
+                <img src="/layouts/assets/thejosh2.jpeg" alt="Reporting" class="rounded-3xl mx-auto w-full md:w-2/5"/>
             </div>
         </div>
     </section>
@@ -292,7 +295,10 @@
                 </div>
                 <div class="mt-6 mb-16">
                     <p class="main-font text-lg font-montserrat">
-                        @yourname 2022
+                        &copy; The Josh
+                        <span id="copyright">
+                            <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+                        </span>
                     </p>
                 </div>
             </div>
