--- a/layouts/index.html
+++ b/layouts/index.html
@@ -56,19 +56,19 @@
 
         <!-- Left column -->
             <div class="w-full xl:w-2/5 p-12 overflow-hidden">
-                <img src="/layouts/assets/thejosh1.png" alt="your name" class="rounded-3xl mx-auto w-full md:w-4/5 "/>
+                <img src="https://res.cloudinary.com/thejm/image/upload/v1670238832/devPortfolio/thejosh1.png" alt="TheJosh" class="rounded-3xl mx-auto w-full md:w-4/5 "/>
                 <div class="flex mt-16 mb-16 flex-row space-x-6 justify-center ">
                     <a href="#" class="">
-                        <img width="46" height="45" src="/layouts/assets/linkedin-icon.svg" alt="Linkedin" class="text-white -mt-1 hover:bg-[#F62BA5] rounded-md"/>
+                        <img width="46" height="45" src="https://res.cloudinary.com/thejm/image/upload/v1670238826/devPortfolio/linkedin-icon.svg" alt="Linkedin" class="text-white -mt-1 hover:bg-[#F62BA5] rounded-md"/>
                     </a>
                     <a href="#" class="">
-                        <img width="47" height="40" src="/layouts/assets/github-icon.svg" alt="GitHub" class=" text-white p-2 hover:bg-[#F62BA5] rounded-md"/>
+                        <img width="47" height="40" src="https://res.cloudinary.com/thejm/image/upload/v1670238825/devPortfolio/github-icon.svg" alt="GitHub" class=" text-white p-2 hover:bg-[#F62BA5] rounded-md"/>
                     </a>
                     <a href="#" class="">
-                        <img width="45" height="35" src="/layouts/assets/twitter-icon.svg" alt="Twitter" class="text-white  p-2 hover:bg-[#F62BA5] rounded-md"/>
+                        <img width="45" height="35" src="https://res.cloudinary.com/thejm/image/upload/v1670238830/devPortfolio/twitter-icon.svg" alt="Twitter" class="text-white  p-2 hover:bg-[#F62BA5] rounded-md"/>
                     </a>
                     <a href="#" class="">
-                        <img width="48" height="40" src="/layouts/assets/email-icon.svg" alt="Email" class="text-white p-1 hover:bg-[#F62BA5] rounded-md"/>
+                        <img width="48" height="40" src="https://res.cloudinary.com/thejm/image/upload/v1670238824/devPortfolio/email-icon.svg" alt="Email" class="text-white p-1 hover:bg-[#F62BA5] rounded-md"/>
                     </a>
                 </div>
             </div>
@@ -122,7 +122,7 @@
             </div>
             <!-- Right column -->
             <div class="w-full xl:w-2/5 p-12 overflow-hidden md:pt-1">
-                <img src="/layouts/assets/project-one.jpg" alt="project name" class="rounded-3xl text-white" />
+                <img src="https://res.cloudinary.com/thejm/image/upload/v1670238830/devPortfolio/project-one.jpg" alt="project name" class="rounded-3xl text-white" />
                 <div class="flex items-center mt-10 justify-center">
                     <div>
                         <!-- scrolls to the second project -->
@@ -165,7 +165,7 @@
             </div>
             <!-- Right column -->
             <div class="w-full xl:w-2/5 p-12 overflow-hidden md:pt-1">
-                <img src="/layouts/assets/project-two.jpg" alt="project name" class="rounded-3xl text-white" />
+                <img src="https://res.cloudinary.com/thejm/image/upload/v1670238832/devPortfolio/project-two.jpg" alt="project name" class="rounded-3xl text-white" />
                     <div class="flex items-center mt-10 justify-center">
                     <div>
                         <button class="p-3 rounded-xl text-white font-bold font-poppins border-solid border-2 border-[#F62BA5] hover:bg-slate-800"> 
@@ -193,31 +193,31 @@
                             <div class="grid grid-rows-3 md:grid-rows-1 grid-flow-col gap-y-10 gap-x-16 mt-10 shrink-0 mx-auto">
                                 <!-- Skills icons -->
                                 <div>
-                                    <img width="50" height="50" src="/layouts/assets/html.svg"/>
+                                    <img width="50" height="50" src="https://res.cloudinary.com/thejm/image/upload/v1670238826/devPortfolio/html.svg"/>
                                 </div>
                                 <div>
-                                    <img width="50" height="70" src="/layouts/assets/vue.svg"/>
+                                    <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670238831/devPortfolio/vue.svg"/>
                                 </div>
                                 <div>
-                                    <img width="50" height="70" src="/layouts/assets/python.svg"/>
+                                    <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670238827/devPortfolio/python.svg"/>
                                 </div>
                                 <div>
-                                    <img width="50" height="70" src="/layouts/assets/css.svg"/>
+                                    <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670238824/devPortfolio/css.svg"/>
                                 </div>
                                 <div>
-                                    <img width="50" height="70" src="/layouts/assets/nuxt.svg"/>
+                                    <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670238826/devPortfolio/nuxt.svg"/>
                                 </div>
                                 <div>
-                                    <img width="50" height="70" src="/layouts/assets/postgresql.svg"/>
+                                    <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670238827/devPortfolio/postgresql.svg"/>
                                 </div>
                                 <div>
-                                    <img width="50" height="70" src="/layouts/assets/js.svg"/>
+                                    <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670238826/devPortfolio/js.svg"/>
                                 </div>
                                 <div>
-                                    <img width="50" height="70" src="/layouts/assets/tailwindcss.svg"/>
+                                    <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670238828/devPortfolio/tailwindcss.svg"/>
                                 </div>
                                 <div>
-                                    <img width="50" height="70" src="/layouts/assets/git.svg"/>
+                                    <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670238825/devPortfolio/git.svg"/>
                                 </div>
                             
                             </div>
@@ -226,16 +226,22 @@
                     <div class="flex justify-between ">
                         <div class="grid grid-rows-3 md:grid-rows-1 grid-flow-col gap-y-10 gap-x-16 mt-10 shrink-0 mx-auto">
                             <div>
-                                <img width="50" height="70" src="/layouts/assets/figma.svg"/>
+                                <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670238824/devPortfolio/figma.svg"/>
                             </div>
                             <div>
-                                <img width="50" height="70" src="/layouts/assets/canva.svg"/>
+                                <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670238824/devPortfolio/canva.svg"/>
                             </div>
                             <div>
-                                <img width="50" height="70" src="/layouts/assets/canva.svg"/>
+                                <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670241880/devPortfolio/desygner.svg"/>
                             </div>
                             <div>
-                                <img width="50" height="70" src="/layouts/assets/canva.svg"/>
+                                <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670242029/devPortfolio/inkscape.svg"/>
+                            </div>
+                            <div>
+                                <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670241841/devPortfolio/AssetCreator.png"/>
+                            </div>
+                            <div>
+                                <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670243867/devPortfolio/adobe_xd_app.svg"/>
                             </div>
                         </div>
                     </div>
@@ -281,16 +287,16 @@
                 <div class="flex mt-16 mb-6 flex-row space-x-6 justify-center">
                     <h1 class="text-white font-montserrat font-bold text-lg">Socials</h1>
                         <a href="#" class="">
-                            <img width="36" height="45" src="/layouts/assets/linkedin-icon.svg" alt="Linkedin" class="text-white -mt-1"/>
+                            <img width="36" height="45" src="https://res.cloudinary.com/thejm/image/upload/v1670238826/devPortfolio/linkedin-icon.svg" alt="Linkedin" class="text-white -mt-1"/>
                         </a>
                         <a href="#" class="">
-                            <img width="24" height="40" src="/layouts/assets/github-icon.svg" alt="GitHub" class=" text-white mt-1"/>
+                            <img width="24" height="40" src="https://res.cloudinary.com/thejm/image/upload/v1670238825/devPortfolio/github-icon.svg" alt="GitHub" class=" text-white mt-1"/>
                         </a>
                         <a href="#" class="">
-                            <img width="25" height="35" src="/layouts/assets/twitter-icon.svg" alt="Twitter" class="text-white mt-1"/>
+                            <img width="25" height="35" src="https://res.cloudinary.com/thejm/image/upload/v1670238830/devPortfolio/twitter-icon.svg" alt="Twitter" class="text-white mt-1"/>
                         </a>
                         <a href="#" class="">
-                            <img width="32" height="40" src="/layouts/assets/email-icon.svg" alt="Email" class="text-white"/>
+                            <img width="32" height="40" src="https://res.cloudinary.com/thejm/image/upload/v1670238824/devPortfolio/email-icon.svg" alt="Email" class="text-white"/>
                         </a>
                 </div>
                 <div class="mt-6 mb-16">
