--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <title>The Josh</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/thejm/image/upload/v1670264095/devPortfolio/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/thejm/image/upload/v1670264095/devPortfolio/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/thejm/image/upload/v1670264095/devPortfolio/favicon-16x16.png">
+    <link rel="manifest" href="https://res.cloudinary.com/thejm/raw/upload/v1670264096/devPortfolio/site.webmanifest">
 </head>
 <body class="bg-primary" id="top">
     
