--- a/layouts/index.html
+++ b/layouts/index.html
@@ -278,7 +278,7 @@
                 </form>
             </div>
             <div class="w-full xl:w-2/5 p-12 overflow-hidden">
-                <img src="https://res.cloudinary.com/thejm/image/upload/v1670238832/devPortfolio/thejosh2.jpg" alt="Reporting" class="rounded-3xl mx-auto w-full md:w-2/5"/>
+                <img src="https://res.cloudinary.com/thejm/image/upload/v1670238832/devPortfolio/thejosh2.jpg" alt="thejosh sage" class="rounded-3xl mx-auto w-full md:w-2/5"/>
             </div>
         </div>
     </section>
