Add: x-twitter icon

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -69,7 +69,7 @@
                         <img width="47" height="40" src="https://res.cloudinary.com/thejm/image/upload/v1670238825/devPortfolio/github-icon.svg" alt="GitHub" class=" text-white p-2 hover:bg-[#F62BA5] rounded-md"/>
                     </a>
                     <a href="#" class="">
-                        <img width="45" height="35" src="https://res.cloudinary.com/thejm/image/upload/v1670238830/devPortfolio/twitter-icon.svg" alt="Twitter" class="text-white  p-2 hover:bg-[#F62BA5] rounded-md"/>
+                        <img width="45" height="35" src="https://res.cloudinary.com/thejm/image/upload/v1736399365/fa6-brands--x-twitter-white.png" alt="x-Twitter" class="text-white  p-2 hover:bg-[#F62BA5] rounded-md"/>
                     </a>
                     <a href="#" class="">
                         <img width="48" height="40" src="https://res.cloudinary.com/thejm/image/upload/v1670238824/devPortfolio/email-icon.svg" alt="Email" class="text-white p-1 hover:bg-[#F62BA5] rounded-md"/>
@@ -297,7 +297,7 @@
                             <img width="24" height="40" src="https://res.cloudinary.com/thejm/image/upload/v1670238825/devPortfolio/github-icon.svg" alt="GitHub" class=" text-white mt-1"/>
                         </a>
                         <a href="#" class="">
-                            <img width="25" height="35" src="https://res.cloudinary.com/thejm/image/upload/v1670238830/devPortfolio/twitter-icon.svg" alt="Twitter" class="text-white mt-1"/>
+                            <img width="25" height="35" src="https://res.cloudinary.com/thejm/image/upload/v1736399365/fa6-brands--x-twitter-white.png" alt="X-Twitter" class="text-white mt-1"/>
                         </a>
                         <a href="#" class="">
                             <img width="32" height="40" src="https://res.cloudinary.com/thejm/image/upload/v1670238824/devPortfolio/email-icon.svg" alt="Email" class="text-white"/>
