Add: Cloudflare analytics

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -332,5 +332,6 @@
             menu.classList.toggle("hidden");
         });
     </script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "6aba678ef206494db1cd68e080880e48"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
