Add: Source code page and discord icon

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -72,7 +72,7 @@
                         <img width="45" height="35" src="https://res.cloudinary.com/thejm/image/upload/v1736399365/fa6-brands--x-twitter-white.png" alt="x-Twitter" class="text-white  p-2 hover:bg-[#F62BA5] rounded-md"/>
                     </a>
                     <a href="#" class="">
-                        <img width="48" height="40" src="https://res.cloudinary.com/thejm/image/upload/v1670238824/devPortfolio/email-icon.svg" alt="Email" class="text-white p-1 hover:bg-[#F62BA5] rounded-md"/>
+                        <img width="45" height="48" src="https://res.cloudinary.com/thejm/image/upload/v1737324730/devPortfolio/discord-icon.svg" alt="Discord" class="text-white p-2 hover:bg-[#F62BA5] rounded-md"/>
                     </a>
                 </div>
             </div>
@@ -105,19 +105,19 @@
             <!-- Left column -->
             <div class="flex flex-col w-full p-4 xl:w-3/5 justify-center lg:items-start overflow-y-hidden">
                 <h1 class="font-semibold font-poppins text-4xl text-white md:text-2xl lg:text-5xl text-left md:text-left ">Projects</h1>
-                <h1 class="font-semibold font-poppins text-xl text-white md:text-xl lg:text-3xl text-left md:text-left mt-12 underline decoration-slate-500">Project Name No. 1</h1>
+                <h1 class="font-semibold font-poppins text-xl text-white md:text-xl lg:text-3xl text-left md:text-left mt-12 underline decoration-slate-500">Hospital Department Website</h1>
                     <p class="main-font font-semibold font-montserrat text-xl mt-16">Approach</p>
                     <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">The project was built using server-side rendering (SSR) with nuxt.js metaframework. This enables fast load times and SEO-friendly pages. The layout, routing, and components were carefully planned to create a modular and scalable architecture. Focus was placed on responsive, user-friendly interfaces, ensuring seamless navigation and interactions.</p>
-                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">On the back end, APIs or external services are integrated as needed, optimizing data flow for speed and security.  A clean, well-documented codebase was maintained, leveraging Nuxt.js’ built-in features like automatic code splitting and prefetching to enhance performance. To ensure the application runs smoothly across all devices and browsers, thorough testing and debugging was conducted before deployment.</p>
+                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">On the back end, directus CMS (Content Management System) was used to manage content and data. Its REST API is used to expose the data to the front-end. This ensures that the application can fetch and display the necessary information efficiently. Additionally, authentication services are integrated as needed, optimizing data flow for speed and security.  A clean, well-documented codebase was maintained, leveraging Nuxt.js’ built-in features like automatic code splitting and prefetching to enhance performance. To ensure the application runs smoothly across all devices and browsers, thorough testing and debugging was conducted before deployment.</p>
                     <p class="main-font font-semibold font-montserrat text-xl mt-16">Tech Stack</p>
-                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">Nuxt &nbsp TailwindCSS &nbsp REST API</p>
+                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">Nuxt &nbsp TailwindCSS &nbsp Directus REST API</p>
                 <div class="flex space-x-8 my-2 md:items-center justify-center mb-16">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="http://s-turl.com/nmd4rmptfl" target="_blank" rel="noopener noreferrer">
                         <button class="px-8 py-3 rounded-xl text-white font-bold font-poppins mt-16 flex items-center space-x-3 border-solid border-2 border-white text-xl sm:w-auto hover:border-2 hover:bg-slate-800"> 
                             Live Demo
                         </button>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="/layouts/source-code.html">
                         <button class="px-8 py-4 bg-button rounded-xl text-white font-bold font-poppins mt-16 flex items-center text-xl w-full sm:w-auto hover:border-2 hover:bg-slate-800"> 
                             Source Code
                         </button>
@@ -126,7 +126,16 @@
             </div>
             <!-- Right column -->
             <div class="w-full xl:w-2/5 p-12 overflow-hidden md:pt-1">
-                <img src="https://res.cloudinary.com/thejm/image/upload/v1670238830/devPortfolio/project-one.jpg" alt="project name" class="rounded-3xl text-white" />
+                <video 
+                    src="https://res.cloudinary.com/thejm/video/upload/v1737310419/devPortfolio/NuclearMed-Site.mp4" 
+                    class="rounded-3xl text-white"
+                    autoplay
+                    loop
+                    muted
+                    playsinline
+                    >
+                    Your browser does not support the video tag.
+                </video>
                 <div class="flex items-center mt-10 justify-center">
                     <div>
                         <!-- scrolls to the second project -->
@@ -300,7 +309,7 @@
                             <img width="25" height="35" src="https://res.cloudinary.com/thejm/image/upload/v1736399365/fa6-brands--x-twitter-white.png" alt="X-Twitter" class="text-white mt-1"/>
                         </a>
                         <a href="#" class="">
-                            <img width="32" height="40" src="https://res.cloudinary.com/thejm/image/upload/v1670238824/devPortfolio/email-icon.svg" alt="Email" class="text-white"/>
+                            <img width="32" height="40" src="https://res.cloudinary.com/thejm/image/upload/v1737324730/devPortfolio/discord-icon.svg" alt="Discord" class="text-white"/>
                         </a>
                 </div>
                 <div class="mt-6 mb-16">
