Relink source code page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -117,7 +117,7 @@
                             Live Demo
                         </button>
                     </a>
-                    <a href="/layouts/source-code.html">
+                    <a href="/source-code.html">
                         <button class="px-8 py-4 bg-button rounded-xl text-white font-bold font-poppins mt-16 flex items-center text-xl w-full sm:w-auto hover:border-2 hover:bg-slate-800"> 
                             Source Code
                         </button>
