Icon logo and project section column diemnsion change

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,12 +16,12 @@
     <!-- Navbar -->
     <header class="font-poppins font-medium text-lg sticky top-0">
         <nav class="bg-primary shadow-lg flex justify-between items-center mx-auto px-8 md:px-14 py-6 lg:px-24 w-full">
-            <div class="text-3xl font-bold text-white">Joshua Ezekiel</div>
+            <div class="text-3xl font-bold text-white"><a href="#">Joshua Ezekiel</a></div>
                 <div class="hidden md:flex space-x-12 items-center text-white ">
-                    <a href="#" class="text-selected-text">Home</a>
                     <a href="#about">About</a>       
                     <a href="#projects">Projects</a>
                     <a href="#skills">Skills</a>
+                    <a href="#Blog">Blog</a>
                     <a href="#contact">
                         <button class="px-6 py-2 bg-button font-bold rounded-xl hover:border-2 hover:bg-slate-800">
                             Contact
@@ -103,7 +103,7 @@
         <!-- Project One -->
         <div class="container pt-24 md:pt-26 mx-auto flex flex-wrap flex-col md:flex-row items-center">
             <!-- Left column -->
-            <div class="flex flex-col w-full p-4 xl:w-3/5 justify-center lg:items-start overflow-y-hidden">
+            <div class="flex flex-col w-full p-4 xl:w-1/2 justify-center lg:items-start overflow-y-hidden">
                 <h1 class="font-semibold font-poppins text-4xl text-white md:text-2xl lg:text-5xl text-left md:text-left ">Projects</h1>
                 <h1 class="font-semibold font-poppins text-xl text-white md:text-xl lg:text-3xl text-left md:text-left mt-12 underline decoration-slate-500">Teaching Hospital Department Website</h1>
                     <p class="main-font font-semibold font-montserrat text-xl mt-16">Approach</p>
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <!-- Right column -->
-            <div class="w-full xl:w-2/5 p-12 overflow-hidden md:pt-1">
+            <div class="w-full xl:w-1/2 p-12 overflow-hidden md:pt-1">
                 <video 
                     src="https://res.cloudinary.com/thejm/video/upload/v1737310419/devPortfolio/NuclearMed-Site.mp4" 
                     class="rounded-3xl text-white"
@@ -156,7 +156,7 @@
             <!-- Project Two -->
         <div class="container pt-24 md:pt-26 mx-auto flex flex-wrap flex-col md:flex-row items-center " id="project-two">
             <!-- Left column -->
-            <div class="flex flex-col w-full p-4 xl:w-3/5 justify-center lg:items-start overflow-y-hidden">
+            <div class="flex flex-col w-full p-4 xl:w-1/2 justify-center lg:items-start overflow-y-hidden">
                 <h1 class="font-semibold font-poppins text-xl text-white md:text-xl lg:text-3xl text-left md:text-left mt-5 underline decoration-slate-500">Project Name No. 2</h1>
                     <p class="main-font font-semibold font-montserrat text-xl mt-16 ">Approach</p>
                     <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">The project utilizes SvelteKit to build a modern, responsive web application focused on performance and user experience. Server-side rendering (SSR) capabilities are leveraged to deliver fast initial load times and improve SEO. Routing and layout management was used to facilitate a clear and maintainable structure. Component-based architecture is employed to ensure reusability and modularity, making it easier to scale and maintain the application.</p>
@@ -177,7 +177,7 @@
                 </div>
             </div>
             <!-- Right column -->
-            <div class="w-full xl:w-2/5 p-12 overflow-hidden md:pt-1">
+            <div class="w-full xl:w-1/2 p-12 overflow-hidden md:pt-1">
                 <img src="https://res.cloudinary.com/thejm/image/upload/v1670238832/devPortfolio/project-two.jpg" alt="project name" class="rounded-3xl text-white" />
                     <div class="flex items-center mt-10 justify-center">
                     <div>
