--- a/layouts/source-code.html
+++ b/layouts/source-code.html
@@ -95,12 +95,12 @@
     <!-- Navbar -->
     <header class="font-poppins font-medium text-lg sticky top-0">
         <nav class="bg-primary shadow-lg flex justify-between items-center mx-auto px-8 md:px-14 py-6 lg:px-24 w-full">
-            <div class="text-3xl font-bold text-white">Joshua Ezekiel</div>
-                <div class="hidden md:flex space-x-12 items-center text-white">
-                    <a href="index.html">Home</a>
+            <div class="text-3xl font-bold text-white"><a href="#">Joshua Ezekiel</a></div>
+                <div class="hidden md:flex space-x-12 items-center text-white ">
                     <a href="index.html#about">About</a>       
                     <a href="index.html#projects">Projects</a>
                     <a href="index.html#skills">Skills</a>
+                    <a href="index.html#Blog">Blog</a>
                     <a href="index.html#contact">
                         <button class="px-6 py-2 bg-button font-bold rounded-xl hover:border-2 hover:bg-slate-800">
                             Contact
