Add only video url to project 2

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -178,7 +178,16 @@
             </div>
             <!-- Right column -->
             <div class="w-full xl:w-1/2 p-12 overflow-hidden md:pt-1">
-                <img src="https://res.cloudinary.com/thejm/image/upload/v1670238832/devPortfolio/project-two.jpg" alt="project name" class="rounded-3xl text-white" />
+                <video 
+                    src="https://res.cloudinary.com/thejm/video/upload/v1737310412/devPortfolio/Url-Shortener-Site.mp4" 
+                    class="rounded-3xl text-white"
+                    autoplay
+                    loop
+                    muted
+                    playsinline
+                    >
+                    Your browser does not support the video tag.
+                </video>
                     <div class="flex items-center mt-10 justify-center">
                     <div>
                         <button class="p-3 rounded-xl text-white font-bold font-poppins border-solid border-2 border-[#F62BA5] hover:bg-slate-800"> 
